--- a/docker/Dockerfile.admin
+++ b/docker/Dockerfile.admin
@@ -14,7 +14,7 @@ RUN npm ci
 # Builder stage
 FROM base AS builder
 COPY --from=deps /app/node_modules ./node_modules
-WORKDIR /app/apps/admin
+WORKDIR /app
 RUN npm run build
 
 # Production stage
